--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_DateFormatter.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_DateFormatter.cshtml
@@ -10,6 +10,41 @@
             View Code
         </button>
     </div>
+    <div class="collapse mt-2" id="codeExample">
+        <div class="card card-body bg-light text-monospace">
+            <pre><codev>
+const currentDateParagraph = document.getElementById("current-date");
+const dateOptionsSelectElement = document.getElementById("date-options");
+
+const date = new Date();
+const day = date.getDate();
+const month = date.getMonth() + 1;
+const year = date.getFullYear();
+const hours = date.getHours();
+const minutes = date.getMinutes();
+
+const formattedDate = `${day}-${month}-${year}`;
+currentDateParagraph.textContent = formattedDate;
+
+dateOptionsSelectElement.addEventListener("change", () => {
+
+    switch (dateOptionsSelectElement.value) {
+        case "yyyy-mm-dd":
+            currentDateParagraph.textContent = formattedDate
+                .split("-")
+                .reverse()
+                .join("-");
+            break;
+        case "mm-dd-yyyy-h-mm":
+            currentDateParagraph.textContent = `${month}-${day}-${year} ${hours} Hours ${minutes} Minutes`;
+            break;
+        default:
+            currentDateParagraph.textContent = formattedDate;
+    }
+});
+            </codev></pre>
+        </div>
+    </div>
     <div class="custom-date-formatter">
         <div class="title-container-date-formatter">
             <h1 class="title-date-formatter">Today's Date</h1>
@@ -63,43 +98,6 @@
         </div>
 
         <p id="current-date"></p>
-    </div>
-    <div class="collapse mt-2" id="codeExample">
-        <div class="card card-body bg-light text-monospace">
-            <pre>
-                <codev>
-const currentDateParagraph = document.getElementById("current-date");
-const dateOptionsSelectElement = document.getElementById("date-options");
-
-const date = new Date();
-const day = date.getDate();
-const month = date.getMonth() + 1;
-const year = date.getFullYear();
-const hours = date.getHours();
-const minutes = date.getMinutes();
-
-const formattedDate = `${day}-${month}-${year}`;
-currentDateParagraph.textContent = formattedDate;
-
-dateOptionsSelectElement.addEventListener("change", () => {
-
-    switch (dateOptionsSelectElement.value) {
-        case "yyyy-mm-dd":
-            currentDateParagraph.textContent = formattedDate
-                .split("-")
-                .reverse()
-                .join("-");
-            break;
-        case "mm-dd-yyyy-h-mm":
-            currentDateParagraph.textContent = `${month}-${day}-${year} ${hours} Hours ${minutes} Minutes`;
-            break;
-        default:
-            currentDateParagraph.textContent = formattedDate;
-    }
-});
-                </codev>
-            </pre>
-        </div>
     </div>
 </div>
 
