--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_FootballTeamCards.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_FootballTeamCards.cshtml
@@ -12,8 +12,7 @@
     </div>
     <div class="collapse mt-2" id="codeExample">
         <div class="card card-body bg-light text-monospace">
-            <pre>
-                <codev>
+            <pre><codev>
 const teamName = document.getElementById("team");
 const typeOfSport = document.getElementById("sport");
 const worldCupYear = document.getElementById("year");
@@ -242,8 +241,7 @@ playersDropdownList.addEventListener("change", (e) => {
 
     }
 });
-                </codev>
-            </pre>
+            </codev></pre>
         </div>
     </div>
     <div class="custom-football-team-cards">
