--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RolePlayingGame.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RolePlayingGame.cshtml
@@ -9,31 +9,9 @@
             View Code
         </button>
     </div>
-    <div id="role-playing-game-output">
-        <div id="game">
-            <div id="stats">
-                <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
-                <span class="stat">Health: <strong><span id="healthText">100</span></strong></span>
-                <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
-            </div>
-            <div id="controls">
-                <button id="button1" class="button-game">Go to store</button>
-                <button id="button2" class="button-game">Go to cave</button>
-                <button id="button3" class="button-game">Fight dragon</button>
-            </div>
-            <div id="monsterStats">
-                <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
-                <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
-            </div>
-            <div id="text">
-                Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
-            </div>
-        </div>
-    </div>
     <div class="collapse mt-2" id="codeExample">
         <div class="card card-body bg-light text-monospace">
-            <pre>
-            <code>
+            <pre><code>
 let xp = 0;
 let health = 100;
 let gold = 50;
@@ -346,8 +324,28 @@ function pick(guess) {
         }
     }
 }
-                </code>
-            </pre>
+            </code></pre>
+        </div>
+    </div>
+    <div id="role-playing-game-output mt-2">
+        <div id="game">
+            <div id="stats">
+                <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
+                <span class="stat">Health: <strong><span id="healthText">100</span></strong></span>
+                <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
+            </div>
+            <div id="controls">
+                <button id="button1" class="button-game">Go to store</button>
+                <button id="button2" class="button-game">Go to cave</button>
+                <button id="button3" class="button-game">Fight dragon</button>
+            </div>
+            <div id="monsterStats">
+                <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
+                <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
+            </div>
+            <div id="text">
+                Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
+            </div>
         </div>
     </div>
 </div>
