--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RockPaperScissorsGame.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RockPaperScissorsGame.cshtml
@@ -10,55 +10,9 @@
             View Code
         </button>
     </div>
-    <div class="custom-rock-paper-scissors-game">
-        <h1>Let's play Rock, Paper, Scissors!</h1>
-        <details class="rules-container">
-            <summary>Rules to the game</summary>
-
-            <p>You will be playing against the computer.</p>
-            <p>You can choose between Rock, Paper, and Scissors.</p>
-            <p>The first one to three points wins.</p>
-
-            <p>Here are the rules to getting a point in the game:</p>
-            <ul>
-                <li>Rock beats Scissors</li>
-                <li>Scissors beats Paper</li>
-                <li>Paper beats Rock</li>
-            </ul>
-            <p>
-                If the player and computer choose the same option (Ex. Paper and
-                Paper), then no one gets the point.
-            </p>
-        </details>
-
-        <div class="score-container">
-            <strong>Player Score: <span class="score" id="player-score">0</span></strong>
-            <strong>
-                Computer Score:
-                <span class="score" id="computer-score">0</span>
-            </strong>
-        </div>
-
-        <section class="options-container">
-            <h2>Choose an option:</h2>
-            <div class="btn-container">
-                <button id="rock-btn" class="btn-rock-paper-scissors-game">Rock</button>
-                <button id="paper-btn" class="btn-rock-paper-scissors-game">Paper</button>
-                <button id="scissors-btn" class="btn-rock-paper-scissors-game">Scissors</button>
-            </div>
-        </section>
-
-        <div class="results-container">
-            <p id="results-msg"></p>
-            <p id="winner-msg"></p>
-            <button class="btn-rock-paper-scissors-game" id="reset-game-btn">Play again?</button>
-        </div>
-    </div>
-
     <div class="collapse mt-2" id="codeExample">
         <div class="card card-body bg-light text-monospace">
-            <pre>
-                <codev>
+            <pre><codev>
 function getRandomComputerResult() {
     const options = ["Rock", "Paper", "Scissors"];
     const randomIndex = Math.floor(Math.random() * options.length);
@@ -143,8 +97,51 @@ paperBtn.addEventListener("click", function () {
 scissorsBtn.addEventListener("click", function () {
     showResults("Scissors");
 });
-                </codev>
-            </pre>
+            </codev></pre>
+        </div>
+    </div>
+    <div class="custom-rock-paper-scissors-game mt-2">
+        <h1>Let's play Rock, Paper, Scissors!</h1>
+        <details class="rules-container">
+            <summary>Rules to the game</summary>
+
+            <p>You will be playing against the computer.</p>
+            <p>You can choose between Rock, Paper, and Scissors.</p>
+            <p>The first one to three points wins.</p>
+
+            <p>Here are the rules to getting a point in the game:</p>
+            <ul>
+                <li>Rock beats Scissors</li>
+                <li>Scissors beats Paper</li>
+                <li>Paper beats Rock</li>
+            </ul>
+            <p>
+                If the player and computer choose the same option (Ex. Paper and
+                Paper), then no one gets the point.
+            </p>
+        </details>
+
+        <div class="score-container">
+            <strong>Player Score: <span class="score" id="player-score">0</span></strong>
+            <strong>
+                Computer Score:
+                <span class="score" id="computer-score">0</span>
+            </strong>
+        </div>
+
+        <section class="options-container">
+            <h2>Choose an option:</h2>
+            <div class="btn-container">
+                <button id="rock-btn" class="btn-rock-paper-scissors-game">Rock</button>
+                <button id="paper-btn" class="btn-rock-paper-scissors-game">Paper</button>
+                <button id="scissors-btn" class="btn-rock-paper-scissors-game">Scissors</button>
+            </div>
+        </section>
+
+        <div class="results-container">
+            <p id="results-msg"></p>
+            <p id="winner-msg"></p>
+            <button class="btn-rock-paper-scissors-game" id="reset-game-btn">Play again?</button>
         </div>
     </div>
 </div>
