Add _RomanNumeralConverter page

--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -78,6 +78,8 @@
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.FootballTeamCards))">Learn Modern JavaScript Methods by Building Football Team Cards</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.TodoApp))">Learn localStorage by Building a Todo App</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.BinaryConverter))">Learn Recursion by Building a Decimal to Binary Converter</button>
+                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.RomanNumeralConverter))">
+                        <i class="bi bi-award me-1"></i> Certification Project: Build a Roman Numeral Converter Project
                 </div>
             </div>
         </div>
