--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/_Magazine.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/_Magazine.cshtml
@@ -11,7 +11,7 @@
                      alt="freecodecamp logo"
                      loading="lazy"
                      class="hero-img" />
-                <h1 class="hero-title">OUR NEW CURRICULUM</h1>
+                <h1 class="hero-title mt-2">OUR NEW PROGRAM</h1>
                 <p class="hero-subtitle">
                     Our efforts to restructure our curriculum with a more project-based
                     focus
@@ -97,24 +97,9 @@
                     <li>
                         <h4 class="list-subtitle">V4 - 2016</h4>
                         <p>
-                            We expanded the curriculum to 3 certifications, including Front
-                            End, Back End, and Data Visualization. They each had 10 required
-                            projects, but only the Front End section had its own challenges.
-                            For the other certs, we were still using external resources like
-                            Node School.
+                            We expanded the curriculum to 3 certifications.
                         </p>
-                    </li>
-                    <li>
-                        <h4 class="list-subtitle">V5 - 2017</h4>
-                        <p>We added the back end and data visualization challenges.</p>
-                    </li>
-                    <li>
-                        <h4 class="list-subtitle">V6 - 2018</h4>
-                        <p>
-                            We launched 6 new certifications to replace our old ones. This was
-                            the biggest curriculum improvement to date.
-                        </p>
-                    </li>
+                    </li>   
                 </ul>
             </article>
             <aside class="image-wrapper">
