Add _NumberSorter page

--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_SpamFilter.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_SpamFilter.cshtml
@@ -58,7 +58,7 @@ checkMessageButton.addEventListener("click", () => {
                       id="message-input"
                       rows="10"
                       cols="40"></textarea>
-            <button class="btn" id="check-message-btn" type="button">
+            <button class="btn-custom-spam-filter" id="check-message-btn" type="button">
                 Check message
             </button>
             <p id="result"></p>
