--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -83,6 +83,7 @@
                     </button>
                     
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.SpamFilter))">Learn Regular Expressions by Building a Spam Filter</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.NumberSorter))">Learn Basic Algorithmic Thinking by Building a Number Sorter</button>
                 </div>
             </div>
         </div>
