--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -85,6 +85,7 @@
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.SpamFilter))">Learn Regular Expressions by Building a Spam Filter</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.NumberSorter))">Learn Basic Algorithmic Thinking by Building a Number Sorter</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.StatisticsCalculator))">Learn Advanced Array Methods by Building a Statistics Calculator</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.Spreadsheet))">Learn Functional Programming by Building a Spreadsheet</button>
                 </div>
             </div>
         </div>
